# rent-radar

./: .gitignore  LICENSE  README.md  pyproject.toml  rental_listings.db  script.py
data/: LA_COUNTY_CITIES.csv  README  SAFMR_2025_LA_COUNTY.csv
rent-radar/: script.py  settings.py
rent_radar/: analysis.py  clients.py  db.py  main.py  scraping.py  settings.py  zillow.py
tests/unit/: test_analysis.py  test_db.py
