[tool.poetry]
name = "rent-radar"
version = "0.1.0"
description = ""
authors = ["elhutton <elhutton@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
black = "^24.10.0"
isort = "^5.13.2"
selenium = "^4.28.1"
fake-useragent = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
